=== HEAD

* Add Dataset#unlimited, similar to unfiltered and unordered (jeremyevans)

* Make Dataset#from_self take an options hash and respect an :alias option, giving the alias to use (Phrogz)

* Make the JDBC adapter accept a :convert_types option to turn off Java type conversion and double performance (jeremyevans)

* Slight increase in ConnectionPool performance (jeremyevans)

* SQL::WindowFunction can now be aliased/casted etc. just like SQL::Function (jeremyevans)

* Model#save no longer attempts to update primary key columns (jeremyevans)

* Sequel will now unescape values provided in connection strings (e.g. ado:///db?host=server%5cinstance) (jeremyevans)

* Significant improvements to the ODBC and ADO adapters in general (jeremyevans)

* The ADO adapter no longer attempts to use database transactions, since they never worked (jeremyevans)

* Much better support for Microsoft SQL Server using the ADO, ODBC, and JDBC adapters (jeremyevans)

* Support rename_column, set_column_null, set_column_type, and add_foreign_key on H2 (jeremyevans)

* Support adding a column with a primary key or unique constraint to an existing table on SQLite (jeremyevans)

* Support altering a column's type, null status, or default on SQLite (jeremyevans)

* Fix renaming a NOT NULL column without a default on MySQL (nougad, jeremyevans) (#273)

* Don't swallow DatabaseConnectionErrors when creating model subclasses (tommy.midttveit)

=== 3.2.0 (2009-07-02)

* In the STI plugin, don't overwrite the STI field if it is already set (jeremyevans)

* Add support for Common Table Expressions, which use the SQL WITH clause (jeremyevans)

* Add SQL::WindowFunction, expand virtual row blocks to support them and other constructions (jeremyevans)

* Add Model#autoincrementing_primary_key, for when the autoincrementing key isn't the same as the primary key (jeremyevans)

* Add Dataset#ungraphed, to remove the splitting of results into subhashes or associated records (jeremyevans)
 